--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <title>Projeto</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <div id="profile">
+        <img src="assets/avatar.png" alt="Minha foto" />
+      </div>
+    </div>
+  </body>
 </html>
