--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Roboto+Condensed&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
@@ -16,6 +16,7 @@
     <div id="container">
       <div id="profile">
         <img src="assets/avatar.png" alt="Minha foto" />
+        <p>@bryanzcria</p>
       </div>
     </div>
   </body>
