--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
         <img src="assets/avatar.png" alt="Minha foto" />
         <p>@bryanzcria</p>
       </div>
+      <ul>
+        <li>
+          <a href="#">Conheça meu servidor</a>
+        </li>
+        <li>
+          <a href="#">Entrar em contato</a>
+        </li>
+        <li>
+          <a href="#">Ver meu portifolio</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Conheça meu instagram</a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
