--- a/index.html
+++ b/index.html
@@ -34,10 +34,24 @@
       </ul>
 
       <div id="social-links">
-        <ion-icon name="logo-github"></ion-icon>
-        <ion-icon name="logo-instagram"></ion-icon>
-        <ion-icon name="logo-facebook"></ion-icon>
-        <ion-icon name="logo-linkedin"></ion-icon>
+        <a href="https://github.com/bryancsdev" target="_blank">
+          <ion-icon name="logo-github"></ion-icon
+        ></a>
+        <a href="https://www.instagram.com/bryanzcria/" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon
+        ></a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100018448057917"
+          target="_blank"
+        >
+          <ion-icon name="logo-facebook"></ion-icon
+        ></a>
+        <a
+          href="https://www.youtube.com/channel/UChUv-S5CPR3gLuegylfvxsw"
+          target="_blank"
+        >
+          <ion-icon name="logo-youtube"></ion-icon
+        ></a>
       </div>
     </div>
     <script
