--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <ion-icon name="logo-youtube"></ion-icon
         ></a>
       </div>
+      <footer>
+        Feito com ♥ por <a href="https://github.com/bryancsdev">mim</a>
+      </footer>
     </div>
     <script
       type="module"
